dataclients/kubernetes/testdata/ingressV1/ingress-data/lb-target-single-multiple-endpointslices.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: namespace1
  name: ingress1
spec:
  defaultBackend:
    service:
      name: service1
      port:
        name: port1
  rules:
  - host: test.example.org
    http:
      paths:
      - path: "/test1"
        pathType: ImplementationSpecific
        backend:
          service:
            name: service1
            port:
              name: port1
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1
spec:
  clusterIP: 1.2.3.4
  ports:
  - name: port1
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: myapp-deployment
    kubernetes.io/service-name: service1
  namespace: namespace1
  name: service1-foo
endpoints:
  - addresses:
    - 42.0.1.2
    zone: my-zone-1
ports:
  - name: port1
    port: 8080
    protocol: TCP
---
apiVersion: v1
kind: EndpointSlice
metadata:
  labels:
    app: myapp-deployment
    kubernetes.io/service-name: service1
  namespace: namespace1
  name: service1-bar
endpoints:
  - addresses:
    - 42.0.1.3
    zone: my-zone-2
ports:
  - name: port1
    port: 8080
    protocol: TCP
